syntax = "proto3";

package go.micro.srv.user;

service Auth {
	rpc Name(NameRequest) returns (AuthResponse) {}
	rpc Mobile(MobileRequest) returns (AuthResponse) {}
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message NameRequest {
	string name = 1;
	string password = 2;
}

message MobileRequest {
  string mobile = 1;
  string code = 2;
}

message AuthResponse {
	string header = 1;
  string token = 2;
  string expiresAt = 3;
}

message RegisterRequest {
  NameRequest NameRequest = 1;
  MobileRequest MobileRequest = 2;
}

message RegisterResponse {
  int64 code = 1;
  string message = 2;
}